k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-deployment
  namespace: cloudops

spec:

  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:

    metadata:
      labels:
        app: backend

    spec:

      containers:

        - name: backend

          image: anmolp20/cloudops-backend:latest

          ports:
            - containerPort: 5000

          resources:

            requests:
              memory: "256Mi"
              cpu: "250m"

            limits:
              memory: "512Mi"
              cpu: "500m"

          livenessProbe:

            httpGet:
              path: /
              port: 5000

            initialDelaySeconds: 30
            periodSeconds: 10


          readinessProbe:

            httpGet:
              path: /
              port: 5000

            initialDelaySeconds: 10
            periodSeconds: 5
