k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service
  namespace: cloudops

spec:

  selector:
    app: frontend

  ports:

    - protocol: TCP
      port: 5173
      targetPort: 5173

  type: NodePort
